--- a/catalog/templates/_navbar.html
+++ b/catalog/templates/_navbar.html
@@ -26,6 +26,9 @@
                 <li class="nav-item ">
                 <a class="nav-link " href="{% url 'login'%}?next={{request.path}}">Log in</a>
                 </li>
+                <li class="nav-item ">
+                  <a class="nav-link " href="{% url 'signup'%}?next={{request.path}}">Sign Up</a>
+                </li>
             {% endif %}
             {% if perms.catalog.can_create_author %}
                 <li class="nav-item ">
